<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.jeddict</groupId>
    <artifactId>jeddict</artifactId>
    <name>Jeddict</name>
    <version>5.4.1</version>
    <packaging>pom</packaging>
    <modules>
        <module>jeddict-lib</module>
        <module>jcode-core</module>
        <module>jcode-util</module>
        <module>jpa-spec</module>
        <module>jpa-modeler</module>
        <module>orm-generator</module>
        <module>collaboration</module>
        <module>relation-mapper</module>
        <module>jsonb-modeler</module>
        <module>db-modeler</module>
        <module>reverse-engineering</module>
        <module>installer</module>
        <module>tests</module>
    </modules>
    <properties>
        <root.dir>${basedir}</root.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <netbeans.version>RELEASE120-1</netbeans.version>
        <netbeans.installation>${root.dir}/../incubator-netbeans/nbbuild/netbeans</netbeans.installation>
        <nbm.cluster>jeddict</nbm.cluster>
        <nbm.build.dir>${root.dir}/../jeddict-cluster</nbm.build.dir>
        <nbm.maven.plugin.version>4.1</nbm.maven.plugin.version>
    </properties>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>nbm-maven-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <!--<verifyRuntime>warn</verifyRuntime>-->
                    <author>Jeddict team</author>
                    <homePageUrl>https://jeddict.github.io/</homePageUrl>
                    <requiresRestart>true</requiresRestart>
                    <licenseName>Apache License v2.0</licenseName>
                    <licenseFile>${root.dir}/LICENSE</licenseFile>
                    <cluster>${nbm.cluster}</cluster>
                    <nbmBuildDir>${nbm.build.dir}</nbmBuildDir>
                    <clusterBuildDir>${nbm.build.dir}/netbeans</clusterBuildDir>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>nbm-maven-plugin</artifactId>
                    <version>${nbm.maven.plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.maven.shared</groupId>
                            <artifactId>maven-dependency-analyzer</artifactId>
                            <version>1.11.1</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
    </build>

    <dependencies>
        <dependency>
            <groupId>io.github.jeddict.modeler</groupId>
            <artifactId>modeler-lib</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <property>
                    <name>!skipDev</name>
                </property>
            </activation>
            <modules>
                <module>examples</module>
            </modules>
        </profile>
        <profile>
            <id>incubation</id>
            <activation>
                <property>
                    <name>!skipIncubation</name>
                </property>
            </activation>
            <modules>
                <module>incubation</module>
            </modules>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>netbeans-modules</id>
            <name>Repository hosting NetBeans modules</name>
            <url>http://bits.netbeans.org/maven2/</url>
        </repository>
    </repositories>
</project>